--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
     "jquery": "1.8",
     "normalize-css": "normalize.css#~3.0.3",
     "modernizr": "2.8.3",
-    "jquery-placeholder": "~2.1.3"
+    "jquery-placeholder": "~2.1.3",
+    "qtip2": "~2.2.1"
   },
   "devDependencies": {
     "bPopup": "bpopup#~0.11.0"
